# LaMiaTesi

./: README.md  abstract.tex  biblio.bib  capitolo1.tex  capitolo2.tex  capitolo3.tex  capitolo4.tex  cognome_nome_laurea_aa.aux  cognome_nome_laurea_aa.bbl  cognome_nome_laurea_aa.blg  cognome_nome_laurea_aa.dvi  cognome_nome_laurea_aa.tex  cognome_nome_laurea_aa.toc  pagina_iniziale.tex  results.ods  ringraziamenti.tex  sommario.tex
frontespizio word/: frontespizio_tesi Andrea.docx
lavoro/blocchi prototipo rsa/: configurar  diagrammaTest.grc
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/: CMakeLists.txt  MANIFEST.md
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/cmake/Modules/: rsaRxConfig.cmake
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/docs/: README.rsaRx
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/docs/doxygen/: Doxyfile.in
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/docs/doxygen/other/: group_defs.dox  main_page.dox
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/grc/: CMakeLists.txt  rsaRx_rsaRx_py_fb.xml
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/include/rsaRx/: CMakeLists.txt  api.h
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/lib/: CMakeLists.txt  qa_rsaRx.cc  qa_rsaRx.h  test_rsaRx.cc
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/python/: CMakeLists.txt  __init__.py  qa_rsaRx_py_fb.py  rsaRx_py_fb.py
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/python/.unittests/python/: qa_rsaRx_py_fb.xml
lavoro/blocchi prototipo rsa/rsa-ricevitore/gr-rsaRx/swig/: CMakeLists.txt  rsaRx_swig.i
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/: CMakeLists.txt  MANIFEST.md
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/cmake/Modules/: rsaConfig.cmake
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/docs/: README.rsa
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/docs/doxygen/: Doxyfile.in
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/docs/doxygen/other/: group_defs.dox  main_page.dox
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/grc/: CMakeLists.txt  rsa_rsaTX_py_bf.xml
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/include/rsa/: CMakeLists.txt  api.h
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/lib/: CMakeLists.txt  qa_rsa.cc  qa_rsa.h  test_rsa.cc
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/python/: CMakeLists.txt  __init__.py  qa_rsaTX_py_bf.py  rsaTX_py_bf.py
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/python/.unittests/python/: qa_rsaTX_py_bf.xml
lavoro/blocchi prototipo rsa/rsa_trasmettitore/gr-rsa/swig/: CMakeLists.txt  rsa_swig.i
lavoro/comunicazione OFDM/: ricevitoreOfdmRtlSdr.grc  ricevitoreOfdmUsrp.grc  trasmettitoreOfdmUsrp.grc
presentazione/: Andrea_Filippi_presentazione.pptx  Scaletta pressentazione.docx
